Add pace box and logic

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                     <label>Projected Time in Minutes: </label>
                     <input type='text' id='time' name='time' placeholder="Please use decimal values">
                 </p>
+                <h3>Or:</h3>
+                <p>
+                        <label>Pace: </label>
+                        <input type='text' id='pace' name='pace' placeholder="Please use decimal values">
+                    </p>
             </form>
             <input type='submit' id='myBtn' name='splits' value='Splits'>
         </div>
